# dyn-dns-update

./: .gitignore  Cargo.toml  Dns.cs  DnsCheck.cs  DnsCheck.fs  DynDnsUpdater.csproj  DynDnsUpdater.fsproj  Error.cs  Error.fs  HttpRequest.fs  Program.cs  Program.fs  PublicIP.cs  PublicIP.fs  README.md  Settings.cs  Settings.fs  Update.cs  Update.fs  Utils.fs  dyn-dns-update-1.sln  dyn-dns-update.csproj  dyn-dns-update.sln
nupkg/: DynDnsUpdater.1.0.0.nupkg  DynDnsUpdater.1.1.0.nupkg
src/: main.rs
