[package]
name = "dyn-dns-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
reqwest = { version = "0.11" , features = ["blocking"] }
dns-lookup = "1.0"

# Pi 2/3/4 Added due to reqwest dependency problems when cross-compiling for RPi
[target.armv7-unknown-linux-gnueabihf]
openssl = { version = "0.10", features = ["vendored"] }